# MetadataStudy

./: CMakeLists.txt  README.md  main.cpp
CPlusPlusTemplates/: CMakeLists.txt  Chapter2.h  Chapter3.cpp  Chapter3.h  Chapter4.h  Chapter5.h
metadata/: CMakeLists.txt  metadataStudy1.cpp  metadataStudy1.h  metadataStudy2.cpp  metadataStudy2.h  metadataStudy3.h
tests/: CMakeLists.txt
tests/TemplatesTest/: CMakeLists.txt  chapter2_tests.cpp  chapter3_tests.cpp  chapter4_tests.cpp  chapter5_tests.cpp
tests/testStudy1/: CMakeLists.txt  metadataStudy3UnitTest.cpp  metadataStudyUnitTest1.cpp  unitTest1.cpp  unitTest2.cpp
